--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,11 @@ repositories {
 }
 
 dependencies {
+    compile 'org.eclipse.jdt:org.eclipse.jdt.core:3.16.0'
+    compile group: 'io.reflectoring.diffparser', name: 'diffparser', version: '1.4'
+    compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.3.0'
+    compile group: 'org.jgrapht', name: 'jgrapht-io', version: '1.3.0'
+    compile 'org.neo4j.driver:neo4j-java-driver:1.7.5'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
