--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,9 @@ dependencies {
     compile group: 'org.jgrapht', name: 'jgrapht-io', version: '1.3.0'
     compile 'org.neo4j.driver:neo4j-java-driver:1.7.5'
 
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
