--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,11 @@ repositories {
 }
 
 dependencies {
-    compile 'org.eclipse.jdt:org.eclipse.jdt.core:3.16.0'
+    compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.16.0'
     compile group: 'io.reflectoring.diffparser', name: 'diffparser', version: '1.4'
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.3.0'
     compile group: 'org.jgrapht', name: 'jgrapht-io', version: '1.3.0'
-    compile 'org.neo4j.driver:neo4j-java-driver:1.7.5'
+    compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '1.7.5'
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
