--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ dependencies {
     compile group: 'io.reflectoring.diffparser', name: 'diffparser', version: '1.4'
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.3.0'
     compile group: 'org.jgrapht', name: 'jgrapht-io', version: '1.3.0'
+
     compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '1.7.5'
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.10.1'
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
