--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '1.7.5'
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.10.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
