--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 dependencies {
     compile fileTree(dir: 'lib', include: ['*.jar'])
     compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.16.0'
