--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.16.0'
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.3.0'
     compile group: 'org.jgrapht', name: 'jgrapht-io', version: '1.3.0'
+    compile group: 'info.debatty', name: 'java-string-similarity', version: '1.2.1'
 
     compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '1.7.5'
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.10.1'
