--- a/log4j.properties
+++ b/log4j.properties
@@ -7,14 +7,16 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
 ### DEBUG --> logs/error.log ###
 log4j.appender.D=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File=logs/debug.log
+log4j.appender.D.File=${logs.dir}/logs/debug.log
+log4j.appender.D.DatePattern='.'yyyy-MM-dd
 log4j.appender.D.Append=true
 log4j.appender.D.Threshold=DEBUG
 log4j.appender.D.layout=org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 ### ERROR --> logs/error.log ###
 log4j.appender.E=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File=logs/error.log
+log4j.appender.E.File=${logs.dir}/logs/error.log
+log4j.appender.E.DatePattern='.'yyyy-MM-dd
 log4j.appender.E.Append=true
 log4j.appender.E.Threshold=ERROR
 log4j.appender.E.layout=org.apache.log4j.PatternLayout
