--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,11 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+//    mavenCentral()
+    maven { url 'https://plugins.gradle.org/m2/' }
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
 }
 
 //gradle.buildFinished { buildResult ->
@@ -65,8 +69,10 @@ dependencies {
     compile group: 'org.jgrapht', name: 'jgrapht-io', version: '1.3.0'
     compile group: 'info.debatty', name: 'java-string-similarity', version: '1.2.1'
 
+    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.7.0.202003110725-r'
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.10.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile group: 'com.ibm.icu', name: 'icu4j', version: '66.1'
 
     compile group: 'log4j', name: 'log4j', version: '2.13.0'
 
