--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     compile group: 'org.apache.logging.log4j', name: 'log4j', version: '2.13.1'
+    compile 'org.apache.maven.shared:maven-invoker:3.0.1'
 
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
