--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'SmartCommitCore'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 sourceCompatibility = 1.8
 
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.github.smartcommit.client.WorkingTree'
+                'Main-Class': 'com.github.smartcommit.client.CLI'
         )
     }
 }
@@ -60,6 +60,7 @@ configurations.all {
 
 dependencies {
     compile fileTree(dir: 'lib', include: ['*.jar'])
+    compile group: 'com.beust', name: 'jcommander', version: '1.78'
     compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.16.0'
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.3.0'
     compile group: 'org.jgrapht', name: 'jgrapht-io', version: '1.3.0'
