--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ dependencies {
 
     compile group: 'org.apache.logging.log4j', name: 'log4j', version: '2.13.1'
     compile 'org.apache.maven.shared:maven-invoker:3.0.1'
+    compile group: 'com.googlecode.juniversalchardet', name: 'juniversalchardet', version: '1.0.3'
 
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
