--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     compile group: 'com.ibm.icu', name: 'icu4j', version: '66.1'
 
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.1'
+    compile group: 'com.googlecode.juniversalchardet', name: 'juniversalchardet', version: '1.0.3'
 
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
