--- a/build.gradle
+++ b/build.gradle
@@ -63,21 +63,21 @@ configurations.all {
 }
 
 dependencies {
-    compile fileTree(dir: 'lib', include: ['*.jar'])
-    compile group: 'com.beust', name: 'jcommander', version: '1.78'
-    compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.16.0'
-    compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.3.0'
-    compile group: 'org.jgrapht', name: 'jgrapht-io', version: '1.3.0'
-    compile group: 'info.debatty', name: 'java-string-similarity', version: '2.0.0'
+    implementation fileTree(dir: 'lib', include: ['*.jar'])
+    implementation 'com.beust:jcommander:1.78'
+    implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.23.0'
+    implementation 'org.jgrapht:jgrapht-core:1.3.0'
+    implementation 'org.jgrapht:jgrapht-io:1.3.0'
+    implementation 'info.debatty:java-string-similarity:2.0.0'
 
-    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.7.0.202003110725-r'
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.10.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    compile group: 'com.ibm.icu', name: 'icu4j', version: '66.1'
+    implementation 'org.eclipse.jgit:org.eclipse.jgit:5.10.0.202012080955-r'
+    implementation 'org.mongodb:mongo-java-driver:3.12.7'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.ibm.icu:icu4j:68.2'
 
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.1'
-    compile group: 'com.googlecode.juniversalchardet', name: 'juniversalchardet', version: '1.0.3'
+    implementation 'org.apache.logging.log4j:log4j-core:2.14.0'
+    implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
 
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
+    testImplementation 'org.assertj:assertj-core:3.18.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
 }
